# BGSubtraction

./: .gitignore
doc/: Dependencies.txt
src/: build_all  make_all  setup.py  test_bgs.py
src/config/: WeightedMovingMeanBGS.xml
src/cpp/: CMakeLists.txt
src/cpp/bgs_library/: CMakeLists.txt
src/cpp/bgs_library/package_bgs/sjn/: SJN_MultiCueBGS.h
src/cpp/cmake/: FindNumpy.cmake
src/cpp/pybgs/: CMakeLists.txt  common.h  pybgs.cpp  pybgs.h  pybgs.i
src/cpp/swig/: common.i
