CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(SWIG_BGS)

SET(Boost_USE_STATIC_LIBS   ON)
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost 1.48 REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

FIND_PACKAGE(Numpy REQUIRED)
INCLUDE_DIRECTORIES(${NUMPY_INCLUDE_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${BGS_SOURCE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

FILE(GLOB_RECURSE SWIG_BGS_FILES *.cpp)

# prevent anu use of -builtin flag for SWIG which does not compile...
SET(CMAKE_SWIG_FLAGS "")

# pybgs C++ library
ADD_LIBRARY(pybgs SHARED ${SWIG_BGS_FILES})
TARGET_LINK_LIBRARIES(pybgs ${Boost_LIBRARIES} ${OpenCV_LIBS} bgs)

# bgs SWIG library
SET_SOURCE_FILES_PROPERTIES(pybgs.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(pybgs.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_MODULE(pybgs python pybgs.i ${SWIG_BGS_FILES})
SWIG_LINK_LIBRARIES(pybgs ${PYTHON_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} 
    ${Boost_LIBRARIES} ${OpenCV_LIBS} bgs)